# unsplash-api-wallpaper

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
unsplash_api_wallpaper/: cli.py  search_terms.txt  unsplash_api.py
unsplash_python_wrapper/: config.py  query.py
